<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Risky Business</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_board_screen">Board Screen</string>
    <string name="plus">+</string>
    <string name="res1">WHEAT</string>
    <string name="res2">SHEEP</string>
    <string name="res3">BRICK</string>
    <string name="res4">WOOD</string>
    <string name="res5">ORE</string>
    <string name="res6">GOLD</string>
    <string name="bank4for1">4:1</string>
    <string name="bank3for1">3:1</string>
    <string name="bank2for1">2:1</string>
    <string name="request_trade">Request Trade</string>
    <string name="confirm_trade">Confirm Trade</string>
    <string name="counter_trade">Counter Trade</string>
    <string name="cancel_trade">Cancel Trade</string>
    <string name="music_volume">Music Volume</string>
    <string name="sound_effects_volume">Sound Volume</string>
    <string name="human">Human</string>
    <string name="computer">Computer</string>
    <string name="title_game_setup_screen">Game Setup</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="choose_num_players">Choose number of players</string>
    <string name="victory_points">Victory points</string>
    <string name="variable_board_generation">Variable board generation</string>
    <string name="attacks">Attacks</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_gamerules_screen">Game Rules</string>
    <string name="num_wood">0</string>
    <string name="num_wool">0</string>
    <string name="num_ore">0</string>
    <string name="num_grain">0</string>
    <string name="num_gold">0</string>
    <string name="num_brick">0</string>
    <string name="vp">VP: </string>
    <string name="num_resources">R: </string>

    <!--Popup Menu Item Titles-->
    <string name="build_road">Build Road</string>
    <string name="build_settlement">Build Settlement</string>
    <string name="upgrade_city">Upgrade to City</string>
    <string name="repair_settlement">Repair Settlement</string>
    <string name="repair_city">Repair City</string>
    <string name="train_soldier">Train Army Unit</string>
    <string name="move_soldier">Move Army Unit</string>
    <string name="attack">Attack</string>

    <string-array name="player_names">
        <item>@string/player_1</item>
        <item>@string/player_2</item>
        <item>@string/player_3</item>
        <item>@string/player_4</item>
    </string-array>

    <string-array name="type_trade_array">
        <item>Bank Trade</item>
        <item>Player Trade</item>
    </string-array>

    <string-array name="num_players_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="victory_points_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

</resources>
