<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/road"
        android:title="@string/build_road"/>

    <group android:id="@+id/corneritems">
        <item
            android:id="@+id/settlement"
            android:title="@string/build_settlement"/>

        <item
            android:id="@+id/repairsettlement"
            android:title="@string/repair_settlement" />

        <item
            android:id="@+id/city"
            android:title="@string/upgrade_city"/>

        <item
            android:id="@+id/repaircity"
            android:title="@string/repair_city"/>

        <item
            android:id="@+id/soldier"
            android:title="@string/train_soldier"/>

        <item
            android:id="@+id/move"
            android:title="@string/move_soldier"/>

        <item
            android:id="@+id/attack"
            android:title="@string/attack"/>
    </group>

</menu>
