<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="85dp"
            android:text="@string/player_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="85dp"
            android:text="@string/player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_side_res1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/res1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bank4for1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/trade_text_size"
            android:visibility="gone"/>

        <Button
            android:id="@+id/right_side_res1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_side_res2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/res2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bank4for1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/trade_text_size"
            android:visibility="gone"/>

        <Button
            android:id="@+id/right_side_res2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_side_res3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/res3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bank4for1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/trade_text_size"
            android:visibility="gone"/>

        <Button
            android:id="@+id/right_side_res3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_side_res4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/res4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bank4for1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/trade_text_size"
            android:visibility="gone"/>

        <Button
            android:id="@+id/right_side_res4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_side_res5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/res5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bank4for1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/trade_text_size"
            android:visibility="gone"/>

        <Button
            android:id="@+id/right_side_res5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_side_res6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/res6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:textSize="@dimen/trade_text_size"/>

        <TextView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/bank4for1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/trade_text_size"
            android:visibility="gone"/>

        <Button
            android:id="@+id/right_side_res6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="@dimen/trade_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="50dp">

        <Button
            android:id="@+id/request_trade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_trade"/>

        <Button
            android:id="@+id/confirm_trade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_trade"/>

        <Button
            android:id="@+id/counter_trade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter_trade"
            android:visibility="gone"/>

        <Button
            android:id="@+id/cancel_trade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_trade"/>

    </LinearLayout>

</LinearLayout>