<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_num_players"
            android:textSize="24dp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/num_players_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/player_1_linear"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textSize="24dp"
            android:textColor="@color/white"/>



            <EditText
                android:id="@+id/edit_text_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:maxLength="10"
                android:textSize="24dp"
                android:checked="true"
                  />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_2_linear"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:textSize="24dp"
            android:textColor="@color/white"/>


            <EditText
                android:id="@+id/edit_text_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2"
                android:maxLength="10"
                android:textSize="24dp"
                android:checked="true"
                  />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_3_linear"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_3"
            android:textSize="24dp"
            android:textColor="@color/white"/>



            <EditText
                android:id="@+id/edit_text_player3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_3"
                android:maxLength="10"
                android:textSize="24dp"
                android:checked="true" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_4_linear"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_4"
            android:textSize="24dp"
            android:textColor="@color/white"/>



            <EditText
                android:id="@+id/edit_text_player4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_4"
                android:textSize="24dp"
                android:maxLength="10"
                android:checked="true"
                  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/victory_points"
            android:textSize="24dp"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/victory_points_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variable_board_generation"
            android:textSize="24dp"
            android:textColor="@color/white"/>

        <ToggleButton
            android:id="@+id/variable_board_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/attacks_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attacks"
            android:textSize="24dp"
            android:textColor="@color/white"/>

        <ToggleButton
            android:id="@+id/attacks_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"/>

    </LinearLayout>



</LinearLayout>